# test_ros_sber_task

control_srv/: CMakeLists.txt  README.md  package.xml
control_srv/action/: control_task.action
control_srv/include/: client.h  controllers.h  server.h
control_srv/launch/: client.launch  server.launch
control_srv/msg/: robot_state.msg
control_srv/src/: run_client.cpp  run_server.cpp
control_srv/srv/: start_control.srv
