<?xml version="1.0"?>
<package>
  <name>control_srv</name>
  <version>0.1.0</version>
  <description>test task for sber robotics</description>
  <maintainer email="chichkanff@gmail.com">I.Chichkanov</maintainer>
  <license>commercial</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>actionlib_msgs</build_depend>  
  <build_depend>actionlib</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>std_msgs</run_depend>  
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>  
  <run_depend>actionlib</run_depend>  

  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
